@@ -254,6 +254,8 @@ class FTerm
    // Data Members
    static int           stdin_no;
    static int           stdout_no;
+   static int           clr_bol_length;
+   static int           clr_eol_length;
    static bool          NewFont;
    static bool          VGAFont;
    static bool          no_shadow_character;
