@@ -1,3 +1,7 @@
+2016-12-11  Markus Gans  <guru.mail@muenster.de>
+	* Accelerates text line drawing by clear with CSI sequences 
+	  to begin or to end of the current line.
+
 2016-11-29  Markus Gans  <guru.mail@muenster.de>
 	* Restore the xterm window title and font 
 	  only if it could be read before
